Add form inputs and styling

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
         <section class="create-account">
           <div class="content-container">
-            <button class="btn">Create Account</button>
+            <button type="submit" class="btn">Create Account</button>
             <h3>Already have an account? <a href="#">Log in</a></h3>
           </div>
       </main>
